--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,11 @@
     justify-content: center;
     align-items: center;
   }
+  h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   form input,
   form button {
     padding: 0.5rem;
